# chronotext-boost

./: .gitignore  README.md  build-android.sh  build-emscripten.sh  build-ios-sim.sh  build-ios.sh  build-macosx.sh  build-mxe.sh  build-osx.sh  clean.sh  config-android.jam  config-ios.jam  init.sh  setup.sh
configs/: android.jam  ios.jam  macosx.jam  mxe.jam
patches/boost-1_53_0/: boost-1_53_0.patch
patches/boost-1_55_0/: boost-1_55_0.patch
samples/: HelloBoost.cpp  run-emscripten.sh  run-mxe.sh  run-osx.sh
test/: CMakeLists.txt  CTestConfig.cmake  TestBoost.cpp
